Update tests.sh