@@ -1,4 +1,4 @@
 #!/bin/bash
 
-# Ejecuta mvn clean install
-mvn clean install
+# Ejecutar pruebas
+MAVEN OPTS="--illegal-access=warn" mvn test 2>&1 | tee test.log
